<resources>
    <string name="app_name">Transvice</string>
    <string name="customer_login">Customer Login</string>
    <string name="login">Login</string>
    <string name="clear_field">Clear Field</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_any_account">Don\'t have any account?</string>
    <string name="to_transvice">to Transvice!</string>
    <string name="email">Email</string>
    <string name="already_have_account">Already have account?</string>
    <string name="app_name_splash">T R A N S V I C E</string>
    <string name="dashboard">Dashboard</string>
    <string name="owner_information">Owner Information</string>
    <string name="list">List</string>
    <string name="services">Services</string>
    <string name="garage_information">Garage Information</string>
    <string name="nama_owner">Nama Owner</string>
    <string name="nomor_pokok">Nomor Pokok</string>
    <string name="alamat">Alamat</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="jenis_service">Jenis Service</string>
    <string name="lama_pengerjaan">Lama Pengerjaan</string>
    <string name="jenis_kendaraan">Jenis Kendaraan</string>
    <string name="tanggal_service">Tanggal Service</string>
    <string name="waktu_service">Waktu Service</string>
    <string name="booking">Booking</string>
    <string name="nama_bengkel">Nama Bengkel</string>
    <string name="transvice">Transvice</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="_0274_55478">0274 55478</string>
    <string name="yogyakarta">Yogyakarta</string>
    <string name="user_location_permission_explanation">Apakah diperbolehkan?</string>
    <string name="user_location_permission_not_granted">Permintaan ditolak</string>
    <string name="loading">Loading</string>
    <string name="name">Name</string>
    <string name="profil_akun">Profil Akun</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="selamat_datang">Selamat datang!</string>
    <string name="pilih_dari_galeri">Pilih dari Galeri</string>
    <string name="buka_kamera">Buka Kamera</string>
</resources>