<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frame">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardGarageInfo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="57dp"
                    android:layout_height="57dp"
                    android:src="@drawable/info"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/garage_information"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_below="@+id/cardGarageInfo"
            android:layout_marginStart="130dp"/>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="180dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp">

            <ImageView
                android:id="@+id/bengkel"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/bengkel" />

            <LinearLayout
                android:id="@+id/layoutNamaBengkel"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bengkel"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNamaBengkel"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_bengkel"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTransvice"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/transvice"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutNoTelp"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutNamaBengkel"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNoTelp"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nomor_telepon"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvNomorTelp"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/_0274_55478"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutAlamat"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutNoTelp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvAlamat"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAlamatBengkel"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/yogyakarta"
                    android:textColor="@color/black" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>