<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="activity"
            type="com.aurelia_truly_jessica.transvice_test.DashboardActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dashboard">

        <TextView
            android:id="@+id/dashboard"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/dashboard"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcome"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_below="@+id/dashboard"
            android:text="@string/selamat_datang"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/btnImage"
            android:layout_width="82dp"
            android:layout_height="75dp"
            android:layout_marginStart="310dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/female"
            android:onClick="@{activity.btnImage}" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="120dp">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="3"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:alignmentMode="alignMargins"
                android:columnOrderPreserved="false">

                <RelativeLayout>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/ownerInfo"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="30dp"
                        app:cardElevation="6dp"
                        android:onClick="@{activity.btnOwnerInfo}">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="140dp"
                                android:layout_height="101dp"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/engineer"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:id="@+id/ownerInfoText"
                        android:layout_width="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_height="wrap_content"
                        android:text="@string/owner_information"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_below="@+id/ownerInfo"/>
                </RelativeLayout>

                <RelativeLayout>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/list"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="30dp"
                        app:cardElevation="6dp"
                        android:onClick="@{activity.btnBooking}">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="110dp"
                                android:layout_height="111dp"
                                android:layout_marginTop="25dp"
                                android:background="@drawable/list"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/listText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/list"
                        android:layout_marginStart="60dp"
                        android:text="@string/booking"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>
                <RelativeLayout>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/service"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginBottom="12dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="30dp"
                        app:cardElevation="6dp"
                        android:onClick="@{activity.btnServices}">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="110dp"
                                android:layout_height="121dp"
                                android:layout_marginTop="20dp"
                                android:background="@drawable/teknisi" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:id="@+id/serviceText"
                        android:layout_width="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/services"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_below="@+id/service"/>
                </RelativeLayout>
                <RelativeLayout>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/garageInfo"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="30dp"
                        app:cardElevation="6dp"
                        android:onClick="@{activity.btnGarageInfo}">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:layout_marginTop="20dp"
                                android:background="@drawable/info"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:id="@+id/garageInfoText"
                        android:layout_width="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_height="wrap_content"
                        android:text="@string/garage_information"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_below="@+id/garageInfo"/>
                </RelativeLayout>
            </GridLayout>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#d32f2f"
            android:layout_marginStart="175dp"
            android:clickable="true"
            android:layout_below="@+id/scrollView"
            android:onClick="@{activity.btnLogout}"
            android:text="@string/logout" />
    </RelativeLayout>

</layout>